--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "outDir": "./JS",
     "rootDir": "./TS",
     "strict": true,
-    "module": "esnext",
-    "target": "es2023", 
+    "target": "ESNext",
+    "module": "ESNext",
     "esModuleInterop": true,
+    "moduleResolution": "node",
   },
   "include": ["./TS/**/*.ts"],
   "exclude":["node_modules"]
