Updating some styles and updating the class card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "moduleResolution": "node",
   },
   "include": ["./TS/**/*.ts"],
-  "exclude":["node_modules"]
+  "exclude":["node_modules" , "JS"]
 }
